Changelog
=========

0.2 (unreleased)
----------------

- Nothing changed yet.


0.1 (2015-01-13)
----------------

- First public preview release. [amleczko]