@@ -4,7 +4,10 @@ Changelog
 0.2 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- various bugfixing [Arie Brosztein, toxsick]
+- refactor sorting parser, add sql order by expresssions;
+  please check http://eve-sqlalchemy.readthedocs.org/#sqlalchemy-sorting 
+  for more details [amleczko]
 
 
 0.1 (2015-01-13)
